# DSS_updater

./: DEVELOPER_NOTE.md  README.md  pyproject.toml
scripts/: __init__.py  update_datashare_software_stack.py
tests/: test_update_datashare_software_stack.py
