[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashare-software-stack-updater"
version = "0.1.0"
description = "ODS-first updater for Datashare software stack sheets from barnard-ci easyconfigs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "odfpy>=1.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
datashare-stack-update = "scripts.update_datashare_software_stack:main"

[tool.setuptools]
packages = ["scripts"]
